@@ -14,12 +14,15 @@ fixed bugs:
 - fixed bug in cons_abspower.c handling infinity values in propagation
 - fixed bug in parsing bounds from CIP-files
 - fixed problem that diving did not save status for infeasible LPs
+- fixed several bugs in propagation of cons_xor: need to take integral variables into account
+- fixed several asserts in cons_xor presolving
 
 features:
 - can now output the solutions in the solution pool in the interactive shell
 - updated Mosek interface to compile with Mosek 7, too
 - reading erroneous CIP files can now output some indication of syntax errors
 - can now run splint on core files
+- cons_xor now uses the integral variable in propagation
 
 performance improvements:
 - improved SCIPlpiAdd{Cols,Rows}() in SoPlex LPi
